@@ -11,6 +11,10 @@ Package author: Mikhail S. Dubrovin
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-02-02
+2014-05-24 Mikhail S. Dubrovin
+- fix ex_princeton_calib_pars
+	
 Tag: V00-02-01
 2014-05-23 Mikhail S. Dubrovin
 - New generic algorithms for access to calibration parameters are implemented;
